# usb_device_notification

./: CMakeLists.txt  README.md  device_notification.cpp  device_notification.h  main.cpp
src/: device_notification.cpp
